# otus_3

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
generator/: CMakeLists.txt  generator.h  main.cpp
ifaces/: ifueled.h
include/: angle.h  battlecruiser.h  burnfuelcommand.h  changevelocitycommand.h  checkfuelcommand.h  checkfuelexception.h  commandexception.h  commandqueue.h  exceptionmanager.h  gameobject.h  icommandexception.h  ihandler.h  imaneuvering.h  imovable.h  ioc.h  irotatable.h  ivelocitychangeable.h  logcommand.h  logexception.h  logger.h  loghandler.h  macrocommand.h  maneuveringcommand.h  moveforward.h  repeatcommand.h  retrycommand.h  retryexception.h  retryhandler.h  rotate.h  secondretrycommand.h  secondretryexception.h  secondretryhandler.h  strategy_1.h  strategy_2.h  vector2d.h
scripts/: ilogger.h
source/: angle.cpp  battlecruiser.cpp  burnfuelcommand.cpp  changevelocitycommand.cpp  checkfuelcommand.cpp  commandqueue.cpp  exceptionmanager.cpp  ioc.cpp  logcommand.cpp  logexception.cpp  logger.cpp  loghandler.cpp  main.cpp  maneuveringcommand.cpp  moveforward.cpp  repeatcommand.cpp  resolvercollection.cpp  retrycommand.cpp  retryhandler.cpp  rotate.cpp  secondretrycommand.cpp  secondretryhandler.cpp  strategy_1.cpp  strategy_2.cpp  vector2d.cpp
tests/: CMakeLists.txt  test_angle.cpp  test_burnfuelcommand.cpp  test_changevelocitycommand.cpp  test_checkfuelcommand.cpp  test_generator.cpp  test_logcommand.cpp  test_loghandler.cpp  test_maneuveringcommand.cpp  test_move.cpp  test_repeatcommand.cpp  test_retrycommand.cpp  test_retryhandler.cpp  test_rotate.cpp  test_strategy_1.cpp  test_strategy_2.cpp  test_vector2d.cpp
